Fix vertical spacing of .media in .card

--- a/hines/static/hines/src/sass/partials/_media.scss
+++ b/hines/static/hines/src/sass/partials/_media.scss
@@ -87,7 +87,8 @@ $media-header-size: $h4-font-size;
 
   .media {
     padding-top: $vertical-space-sm;
-    padding-bottom: $vertical-space-sm;
+  // So the bottom padding and border equal one $vertical-space-sm:
+    padding-bottom: calc(#{$vertical-space-sm} - #{$border-width-sm});
     @include text-style-alt;
 
     &:last-child {
